--- a/attedance.html
+++ b/attedance.html
@@ -314,7 +314,12 @@
                                 <h3 class="f-w-600">Attendance</h3>
                             </div>
                             <div class="col-6">
-                                <div class="breadcrumb-sec">
+                                <div class="col-12 d-flex align-items-end justify-content-end ">
+                                    <a href="batchList.html" class="text-white">
+                                        <button class="btn btn-pill btn-warning mx-2 mb-4" type="button">Import</button>
+                                    </a>
+                                </div>
+                                <!-- <div class="breadcrumb-sec">
                                     <ul class="breadcrumb">
                                         <li class="breadcrumb-item">
                                             <a href="dashboard.html"><i data-feather="home"></i></a>
@@ -322,7 +327,7 @@
                                         <li class="breadcrumb-item">Candidate</li>
                                         <li class="breadcrumb-item active">Attendance</li>
                                     </ul>
-                                </div>
+                                </div> -->
                             </div>
                         </div>
                     </div>
