--- a/career.html
+++ b/career.html
@@ -257,7 +257,7 @@
                                             <th>Contact No</th>
                                             <th>Remarks</th>
                                             <th>Center Name</th>
-                                            <th>Action</th>
+                                            <!-- <th>Action</th> -->
                                         </tr>
                                     </thead>
                                     <tbody>
@@ -266,18 +266,18 @@
                                             <td>1234567890</td>
                                             <td>ABC1</td>
                                             <td>isanpur</td>
-                                            <td class="d-flex justify-content-center icon">
+                                            <!-- <td class="d-flex justify-content-center icon">
                                                 <i class="icondt fa fa-eye text-success" title="View" onclick="myFunction()"></i>
-                                            </td>
+                                            </td> -->
                                         </tr>
                                         <tr>
                                             <td>Candidate 2</td>
                                             <td>1234562890</td>
                                             <td>ABC2</td>
                                             <td>isanpur</td>
-                                            <td class="d-flex justify-content-center icon">
+                                            <!-- <td class="d-flex justify-content-center icon">
                                                 <i class="icondt fa fa-eye text-success" title="View" onclick="myFunction()"></i>
-                                            </td>
+                                            </td> -->
                                         </tr>
                                     </tbody>
                                 </table>
