--- a/hostel.html
+++ b/hostel.html
@@ -229,7 +229,7 @@
                     <div class="col-lg-6">
                       <label>Batch Id</label>
                       <select class="form-select digits" id="candidateSelect" disabled>
-                        <option selected>BATCH/5960/11/2023</option>
+                        <option selected>1</option>
                       </select>
                     </div>
                     <div class="col-lg-6 ">
@@ -304,7 +304,7 @@
                     <div class="col-lg-6">
                       <label>Batch Id</label>
                       <select class="form-select digits" id="candidateSelect" disabled>
-                        <option selected>BATCH/5960/11/2023</option>
+                        <option selected>2</option>
                       </select>
                     </div>
                     <div class="col-lg-6 ">
@@ -390,12 +390,12 @@
                     <tr>
                       <td>Jamshedpur Center</td>
                       <td>Automotive AC Technician</td>
-                      <td>BATCH/5960/11/2023</td>
+                      <td>1</td>
                       <td>01-01-2021</td>
                       <td>29-02-2021</td>
                       <td>59</td>
                       <td class="d-flex justify-content-center icon">
-                        <i class="icondt fa-regular fa-plus" onclick="myFunction()"  title="Add"></i>
+                        <i class="icondt fa-regular fa-plus"  title="Add"></i>
                         <i class="icondt text-success fa fa-eye" data-bs-toggle="modal"  data-original-title="test"
                           data-bs-target="#exampleModal" onclick="viewHostel()" title="View">
                         </i>
@@ -404,7 +404,7 @@
                     <tr>
                       <td>Jamshedpur Center</td>
                       <td>Automotive AC Technician</td>
-                      <td>BATCH/5968/11/2021</td>
+                      <td>2</td>
                       <td>01-01-2021</td>
                       <td>29-02-2021</td>
                       <td>59</td>
