--- a/milestone.html
+++ b/milestone.html
@@ -334,9 +334,9 @@
                                         <div class="col-lg-6 ">
                                             <label>Remarks</label>
                                             <div class="input-group">
-                                                <input name="details" type="text" value=""
+                                                <textarea name="details" type="text" value=""
                                                     class="form-control" id="businessDetails"
-                                                    placeholder="Enter Remarks" />
+                                                    placeholder="Enter Remarks">Enter Remarks</textarea>
                                             </div>
                                         </div>
                                     </div>
@@ -462,14 +462,13 @@
                                     <tbody>
                                         <tr>
                                             <td>Milestone 1</td>
-                                            <td>2000
-                                            </td>
-                                            <td>2000</td>
-                                            <td>2000</td>
-                                            <td>-</td>
-                                            <td>-</td>
-                                            <td>-</td>
-                                            <td>-</td>
+                                            <td>40,000</td>
+                                            <td>54,400</td>
+                                            <td>55,000</td>
+                                            <td>50,000</td>
+                                            <td>Bill-1</td>
+                                            <td>02-04-2024</td>
+                                            <td>Pending</td>
                                             <td> <i class="icondt text-primary fa fa-pen" data-bs-toggle="modal"
                                                     data-original-title="test" data-bs-target="#exampleModal"
                                                     title="Edit"></i>
@@ -483,13 +482,13 @@
                                         </tr>
                                         <tr>
                                             <td>Milestone  2</td>
-                                            <td>20000</td>
-                                            <td>20000</td>
-                                            <td>20000</td>
-                                            <td>20000</td>
-                                            <td>-</td>
-                                            <td>-</td>
-                                            <td>-</td>
+                                            <td>40,000</td>
+                                            <td>19,200</td>
+                                            <td>20,000</td>
+                                            <td>17,000</td>
+                                            <td>Bill-1</td>
+                                            <td>02-06-2024</td>
+                                            <td>Rejected</td>
                                             <td> <i class="icondt text-primary fa fa-pen" data-bs-toggle="modal"
                                                     data-original-title="test" data-bs-target="#exampleModal"
                                                     title="Edit"></i>
@@ -503,13 +502,13 @@
                                         </tr>
                                         <tr>
                                             <td>Milestone 3</td>
-                                            <td>20000</td>
-                                            <td>20000</td>
-                                            <td>20000</td>
-                                            <td>20000</td>
-                                            <td>20000</td>
-                                            <td>20000</td>
-                                            <td>-</td>
+                                            <td>40.000</td>
+                                            <td>14,400</td>
+                                            <td>14,400</td>
+                                            <td>14,400</td>
+                                            <td>Bill-2</td>
+                                            <td>011-07-2024</td>
+                                            <td>Re-Upload</td>
                                             <td> <i class="icondt text-primary fa fa-pen" data-bs-toggle="modal"
                                                     data-original-title="test" data-bs-target="#exampleModal"
                                                     title="Edit"></i>
