--- a/statusList.html
+++ b/statusList.html
@@ -526,9 +526,9 @@
                     <thead>
                       <tr>
                         <th>Name</th>
-                        <th>Mobile No.</th>
+                        <th>Contact No.</th>
                         <th>Course Interested</th>
-                        <th>Batch</th>
+                        <th>Batch ID</th>
                         <th>Center Name</th>
                         <th>Status</th>
                         <th>Reference</th>
@@ -540,7 +540,7 @@
                         <td>John Doe</td>
                         <td>1234567890</td>
                         <td>Java</td>
-                        <td>Ahmedabad</td>
+                        <td>2</td>
                         <td>Abc</td>
                         <td>Certified</td>
                         <td>no</td>
@@ -565,7 +565,7 @@
                         <td>Arthur</td>
                         <td>087654321</td>
                         <td>Angular</td>
-                        <td>Modasa</td>
+                        <td>1</td>
                         <td>xyz</td>
                         <td>Not Certified</td>
                         <td>aasd</td>
