--- a/addHostel.html
+++ b/addHostel.html
@@ -355,35 +355,33 @@
                     <div class="row">
                       <div class="col-lg-4">
                         <label>Batch Id</label>
-                        <select class="form-select digits" id="candidateSelect" disabled>
-                          <option selected>BATCH/5960/11/2023</option>
-                        </select>
+                        <input id="candidateSelect" class="form-control" disabled value="1">
                       </div>
                       <div class="col-lg-4 mt-2">
                         <label>Month</label>
                         <input type="text" name="" id="" value="Month1" class="form-control" disabled>
                       </div>
+                      <div class="col-lg-4 mt-2">
+                        <label>Days</label>
+                        <input type="number" name="" id="" value="30" class="form-control" disabled>
+                      </div>                   
                       <div class="col-lg-4 ">
                         <label>From Date</label>
                         <div class="input-group">
-                          <input name="details" type="date" value="2021-11-02" class="form-control"
+                          <input name="details" type="date" value="2021-11-02" class="form-control" disabled
                             id="businessDetails" />
                         </div>
                       </div>
                       <div class="col-lg-4 mt-2">
                         <label>To Date</label>
-                        <input name="details" type="date" value="2021-12-02" class="form-control"
+                        <input name="details" type="date" value="2021-12-02" class="form-control" disabled
                           id="businessDetails" />
                       </div>
                       <div class="col-lg-4 mt-2">
-                        <label>Days</label>
-                        <input type="number" name="" id="" value="30" class="form-control" disabled>
-                      </div>                   
-                      <div class="col-lg-4 mt-2">
-                        <label>Projection Valued</label>
+                        <label>Projection Value</label>
                         <div class="input-group">
                           <input type="number" id="businessName" value="2000" class="form-control"
-                          placeholder="Enter projection valued">
+                          placeholder="Enter projection value">
                         </div>
                       </div>
                       <hr class="class mt-3 mb-3 mx-auto">
@@ -460,58 +458,59 @@
                     <div class="row">
                       <div class="col-lg-4">
                         <label>Batch Id</label>
-                        <select class="form-select digits" id="candidateSelect" disabled>
-                          <option selected>BATCH/5960/11/2023</option>
-                        </select>
-                      </div>
-                      <div class="col-lg-4 ">
-                        <label>From Date</label>
-                        <div class="input-group">
-                          <input name="details" type="date" value="2021-11-02" class="form-control" id="businessDetails" />
-                        </div>
-                      </div>
-                      <div class="col-lg-4 mt-2">
-                        <label>To Date</label>
-                        <input name="details" type="date" value="2021-12-02" class="form-control" id="businessDetails" />
+                        <input id="candidateSelect" class="form-control" disabled value="1">
                       </div>
                       <div class="col-lg-4 mt-2">
                         <label>Month</label>
-                        <select class="form-select digits" id="candidateSelect">
-                          <option selected disabled>Month 1</option>
-                        </select>
+                        <input type="text" name="" id="" value="Month1" class="form-control" disabled>
                       </div>
                       <div class="col-lg-4 mt-2">
                         <label>Days</label>
                         <input type="number" name="" id="" value="30" class="form-control" disabled>
+                      </div>                   
+                      <div class="col-lg-4 ">
+                        <label>From Date</label>
+                        <div class="input-group">
+                          <input name="details" type="date" value="2021-11-02" class="form-control" disabled
+                            id="businessDetails" />
+                        </div>
                       </div>
                       <div class="col-lg-4 mt-2">
-                        <label>Projection Valued</label>
+                        <label>To Date</label>
+                        <input name="details" type="date" value="2021-12-02" class="form-control" disabled
+                          id="businessDetails" />
+                      </div>
+                      <div class="col-lg-4 mt-2">
+                        <label>Projection Value</label>
                         <div class="input-group">
-                          <input type="number" id="businessName" value="20000" class="form-control" placeholder="Enter projection valued">
+                          <input type="number" id="businessName" value="2000" class="form-control"
+                          placeholder="Enter projection value">
                         </div>
                       </div>
                       <hr class="class mt-3 mb-3 mx-auto">
                       <div class="col-lg-4 mt-2">
                         <label>Invoice No.</label>
-                        <input type="text" name="" id="" class="form-control" value="" placeholder="Enter Invoice no.">
+                        <input type="text" name="" id="" class="form-control" placeholder="Enter Invoice no.">
                       </div>
-                     
                       <div class="col-lg-4 mt-2">
                         <label>Claimed Bill</label>
                         <div class="input-group">
-                          <input name="details" type="number" min="0" value="" class="form-control" id="businessDetails" placeholder="Enter claimed bill" />
+                          <input name="details" type="number" min="0" class="form-control" id="businessDetails"
+                            placeholder="Enter claimed bill" />
                         </div>
                       </div>
                       <div class="col-lg-4 mt-2">
                         <label>Recieved Bill</label>
                         <div class="input-group">
-                          <input name="details" type="number" min="0" value="" class="form-control" id="businessDetails" placeholder="Enter received bill" />
+                          <input name="details" type="number" min="0" class="form-control" id="businessDetails"
+                            placeholder="Enter received bill" />
                         </div>
                       </div>
                       <div class="col-lg-4 mt-2">
                         <label>Remarks</label>
                         <div class="input-group">
-                          <input name="remarks" type="textarea" class="form-control" id="businessDetails" placeholder="Enter Remarks" />
+                          <textarea name="details" type="number" min="0" class="form-control" id="businessDetails"
+                            placeholder="Enter received bill" >Enter remarks</textarea>
                         </div>
                       </div>
                     </div>
