--- a/batchList.html
+++ b/batchList.html
@@ -224,7 +224,7 @@
                 </div>
                 <div class="col-12 d-flex align-items-end justify-content-end ">
                     <a href="batchList.html" class="text-white">
-                        <button class="btn btn-pill btn-success mx-2" type="button">Export Batch List</button>
+                        <button class="btn btn-pill btn-success mx-2 mb-4" type="button">Export Batch List</button>
                     </a>
                 </div>
                 <div class="container-fluid">
