--- a/placement.html
+++ b/placement.html
@@ -439,11 +439,9 @@
                           <th>Name</th>
                           <th>Mobile No.</th>
                           <th>Course Interested</th>
-                          <th>Batch</th>
+                          <th>Batch Id</th>
                           <th>Center Name</th>
                           <th>Status</th>
-                          <th>Reference</th>
-                          <th>Total Working Days</th>
                           <th>Action</th>
                         </tr>
                       </thead>
@@ -452,11 +450,9 @@
                           <td>John Doe</td>
                           <td>1234567890</td>
                           <td>Java</td>
+                          <td>5</td>
                           <td>Ahmedabad</td>
-                          <td>Abc</td>
                           <td>Certified</td>
-                          <td>No</td>
-                          <td>58</td>
                           <td class="d-flex justify-content-center icon">
                             <i
                               class="icondt text-primary fa-regular fa-plus"
@@ -478,11 +474,9 @@
                           <td>Arthur</td>
                           <td>087654321</td>
                           <td>Angular</td>
+                          <td>5</td>
                           <td>Modasa</td>
-                          <td>xyz</td>
                           <td>Certified</td>
-                          <td>aasd</td>
-                          <td>45</td>
                           <td class="d-flex justify-content-center icon">
                             <i
                               class="icondt text-primary fa-regular fa-plus"
@@ -504,10 +498,8 @@
                           <td>Jane Smith</td>
                           <td>1122334455</td>
                           <td>React</td>
+                          <td>2</td>
                           <td>Baroda</td>
-                          <td>def</td>
-                          <td>Certified</td>
-                          <td>Yes</td>
                           <td>-</td>
                           <td class="d-flex justify-content-center icon">
                             <i
@@ -530,10 +522,8 @@
                           <td>Emily Clark</td>
                           <td>9988776655</td>
                           <td>Python</td>
-                          <td>Surat</td>
-                          <td>ghi</td>
-                          <td>Certified</td>
-                          <td>No</td>
+                          <td>1</td>
+                          <td>center-2</td>
                           <td>-</td>
                           <td class="d-flex justify-content-center icon">
                             <i
