--- a/postion.html
+++ b/postion.html
@@ -222,7 +222,7 @@
                         <div class="col-lg-12 row d-flex justify-content-end align-items-end">
                           <div class="col-lg-3 d-flex justify-content-end align-items-end">
                             <button class="btn btn-pill btn-primary" data-bs-toggle="modal"
-                                    data-original-title="test" data-bs-target="#exampleModal">Create Postion</button>
+                                    data-original-title="test" data-bs-target="#exampleModal">Add Postion</button>
                           </div>
                           
                         </div>
