--- a/staff.html
+++ b/staff.html
@@ -493,6 +493,32 @@
             </div>
           </div>
 
+          <div class="modal fade" id="modal" tabindex="-1" role="dialog" aria-labelledby="modal"
+                aria-hidden="true">
+                <div class="modal-dialog modal-dialog-centered" role="document">
+                  <div class="modal-content">
+                    <div class="modal-header">
+                      <h5 class="modal-title" id="modal">Center Delete</h5>
+                      <button class="btn-close" type="button" data-bs-dismiss="modal" aria-label="Close"></button>
+                    </div>
+                    <div class="modal-body">
+                      <p>Are you sure, you want to delete?</p>
+                  
+                    </div>
+                    <div class="modal-footer">
+                      <div class="d-flex justify-content-end">
+                        <button class="btn btn-pill btn-secondary mx-2" type="button" data-bs-dismiss="modal">
+                          Cancel
+                        </button>
+                        <!-- <button class="btn btn-pill btn-primary-gradien mx-2" type="button">Submit</button> -->
+                        <button class="btn btn-pill btn-success" type="button">
+                          Yes
+                        </button>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
           <div
     class="modal fade"
     id="viewDetailsModal"
@@ -623,6 +649,7 @@
                             id="endorse"
                             title="endorse"
                           ></i>
+                          <i class="icondt fa fa-trash text-danger" data-bs-toggle="modal" data-original-title="test" data-bs-target="#modal" id="endorse" title="delete"></i>
                         </td>
                       </tr>
                       <tr>
@@ -645,6 +672,7 @@
                             id="endorse1"
                             title="endorse"
                           ></i>
+                          <i class="icondt fa fa-trash text-danger" data-bs-toggle="modal" data-original-title="test" data-bs-target="#modal" id="endorse" title="delete"></i>
                         </td>
                       </tr>
                     </tbody>
