--- a/tot.html
+++ b/tot.html
@@ -194,6 +194,7 @@
                     <li><a href="category.html">Category</a></li>
                     <li><a href="career.html">Career</a></li>
                     <li><a href="postion.html">Position</a></li>
+                    <li><a href="stock.html">Stock</a></li>
                   </ul>
                 </li>
                 <li class="dropdown">
@@ -216,6 +217,7 @@
                     <li><a href="tot.html">TOT</a></li>
                     <li><a href="accreditation.html">accreditation</a></li>
                     <li><a href="placement.html">Placement</a></li>
+                    <li><a href="Inventory.html">Inventory</a></li>
                   </ul>
                 </li>
 
