--- a/viewCandidate.html
+++ b/viewCandidate.html
@@ -262,6 +262,7 @@
                       <li><a href="category.html">Category</a></li>
                       <li><a href="career.html">Career</a></li>
                       <li><a href="postion.html">Position</a></li>
+                      <li><a href="stock.html">Stock</a></li>
                     </ul>
                   </li>
                   <li class="dropdown">
@@ -284,6 +285,7 @@
                       <li><a href="tot.html">TOT</a></li>
                       <li><a href="accreditation.html">accreditation</a></li>
                       <li><a href="placement.html">Placement</a></li>
+                      <li><a href="Inventory.html">Inventory</a></li>
                     </ul>
                   </li>
   
