--- a/dashboard.html
+++ b/dashboard.html
@@ -194,6 +194,17 @@
                     <li><a href="Inventory.html">Inventory</a></li>
                   </ul>
                 </li>
+                <li class="dropdown">
+                  <a class="nav-link menu-title" href="javascript:void(0)"><i
+                      data-feather="grid"></i><span>HR</span></a>
+                  <ul class="nav-submenu menu-content">
+                    <li><a href="hr_staff.html">Staff</a></li>
+                    <li><a href="hr_addStaff.html">ADD Staff</a></li>
+                    <li><a href="hr_staffProfile.html">Profile</a></li>
+                     <li><a href="hr_staffSalary.html">Salary Overview</a></li>
+                    <!--<li><a href="Inventory.html">Inventory</a></li> -->
+                  </ul>
+                </li>
 
               </ul>
             </div>
