--- a/reminder.html
+++ b/reminder.html
@@ -221,7 +221,16 @@
                               <li><a href="Inventory.html">Inventory</a></li>
                             </ul>
                           </li>
-          
+                          <li class="dropdown">
+                            <a class="nav-link menu-title" href="javascript:void(0)"><i
+                                data-feather="grid"></i><span>HR</span></a>
+                            <ul class="nav-submenu menu-content">
+                                <li><a href="hr_dashboard.html">Dashboard</a></li>
+                              <li><a href="hr_staff.html">Staff</a></li>
+                               <li><a href="hr_staffSalary.html">Salary Overview</a></li>
+                               <li><a href="hr_leave.html">Staff Leave</a></li>
+                            </ul>
+                          </li>
                         </ul>
                       </div>
                       <!-- <div class="right-arrow" id="right-arrow"><i data-feather="arrow-right"></i></div> -->
