--- a/hr_addStaff.html
+++ b/hr_addStaff.html
@@ -704,7 +704,7 @@
                                                         
                                                         <div class="d-flex justify-content-end">
                                                             <button type="button" class="btn btn-pill btn-secondary mx-2" onclick="showInfo('profile-info', 1)">Back</button>
-                                                            <button type="submit" class="btn btn-pill btn-primary" onclick="showInfo('employment-info', 3)">Next</button>
+                                                            <button type="button" class="btn btn-pill btn-primary" onclick="showInfo('employment-info', 3)">Next</button>
                                                         </div>
                                                     </div>
                                                 </div>
@@ -776,7 +776,7 @@
                                                 </div>
                                                 <div class="d-flex justify-content-end">
                                                     <button type="button" class="btn btn-pill btn-secondary mx-2" onclick="showInfo('personal-info', 2)">Back</button>
-                                                    <button type="submit" class="btn btn-pill btn-primary" onclick="showInfo('bank-info', 4)">Next</button>
+                                                    <button type="button" class="btn btn-pill btn-primary" onclick="showInfo('bank-info', 4)">Next</button>
                                                 </div>
                                             </div>
                                         </div>
@@ -849,7 +849,7 @@
                                                   </div>
                                                   <div class="d-flex justify-content-end">
                                                     <button type="button" class="btn btn-pill btn-secondary mx-2" onclick="showInfo('employment-info', 3)">Back</button>
-                                                    <button type="submit" class="btn btn-pill btn-primary" onclick=nextFunction()>Submit</button>
+                                                    <button type="button" class="btn btn-pill btn-primary" onclick=nextFunction()>Submit</button>
                                                   </div>
                             
                                               </div>
